--- a/themes/hello-friend/assets/scss/_main.scss
+++ b/themes/hello-friend/assets/scss/_main.scss
@@ -102,6 +102,27 @@ img {
   }
 }
 
+table {
+    table-layout: fixed;
+    border-collapse: collapse;
+    width: 100%;
+    margin: 40px 0;
+    border-radius: 5px;
+  }
+  
+  table, th, td {
+    border: 1px solid;
+    padding: 10px;
+  }
+  
+  th {
+    background: $light-background-secondary;
+  
+    .dark-theme & {
+      background: $dark-background-secondary;
+    }
+  }
+
 figure {
   display: table;
   max-width: 100%;
