--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -102,27 +102,6 @@ img {
   }
 }
 
-table {
-    table-layout: fixed;
-    border-collapse: collapse;
-    width: 100%;
-    margin: 40px 0;
-    border-radius: 5px;
-  }
-  
-  table, th, td {
-    border: 1px solid;
-    padding: 10px;
-  }
-  
-  th {
-    background: $light-background-secondary;
-  
-    .dark-theme & {
-      background: $dark-background-secondary;
-    }
-  }
-
 figure {
   display: table;
   max-width: 100%;
@@ -157,6 +136,27 @@ figure {
     &.right {
       text-align: right;
     }
+  }
+}
+
+table {
+  table-layout: fixed;
+  border-collapse: collapse;
+  width: 100%;
+  margin: 40px 0;
+  border-radius: 5px;
+}
+  
+table, th, td {
+  border: 1px solid;
+  padding: 10px;
+}
+  
+th {
+  background: $light-background-secondary;
+  
+  .dark-theme & {
+      background: $dark-background-secondary;
   }
 }
 
@@ -243,7 +243,7 @@ ol ol {
 }
 
 .container {
-  flex: 1;
+  flex: 1 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -292,35 +292,35 @@ hr {
 
 // Accessibility
 .screen-reader-text {
-	border: 0;
-	clip: rect(1px, 1px, 1px, 1px);
-	clip-path: inset(50%);
-	height: 1px;
-	margin: -1px;
-	overflow: hidden;
-	padding: 0;
-	position: absolute !important;
-	width: 1px;
-	word-wrap: normal !important;
+  border: 0;
+  clip: rect(1px, 1px, 1px, 1px);
+  clip-path: inset(50%);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute !important;
+  width: 1px;
+  word-wrap: normal !important;
 }
 
 .screen-reader-text:focus {
-	background-color: #f1f1f1;
-	border-radius: 3px;
-	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
-	clip: auto !important;
-	clip-path: none;
-	color: #21759b;
-	display: block;
-	font-size: 14px;
-	font-size: 0.875rem;
-	font-weight: bold;
-	height: auto;
-	left: 5px;
-	line-height: normal;
-	padding: 15px 23px 14px;
-	text-decoration: none;
-	top: 5px;
-	width: auto;
-	z-index: 100000;
+  background-color: #f1f1f1;
+  border-radius: 3px;
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
+  clip: auto !important;
+  clip-path: none;
+  color: #21759b;
+  display: block;
+  font-size: 14px;
+  font-size: 0.875rem;
+  font-weight: bold;
+  height: auto;
+  left: 5px;
+  line-height: normal;
+  padding: 15px 23px 14px;
+  text-decoration: none;
+  top: 5px;
+  width: auto;
+  z-index: 100000;
 }
