fix single figure placement in edge

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -103,7 +103,7 @@ figure {
 .figures {
   display: flex;
   max-width: 100%;
-  justify-content: space-evenly;
+  justify-content: center;
 
   .figure {
     img {
