--- a/assets/scss/_logo.scss
+++ b/assets/scss/_logo.scss
@@ -22,7 +22,7 @@
     display: inline-block;
     width: 10px;
     height: 1rem;
-    background: #00BFF3;
+    background: #00bff3;
     margin-left: 5px;
     border-radius: 1px;
     animation: cursor 1.25s infinite;
