--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,17 +1,6 @@
 {{ define "main" }}
-  <main aria-role="main">
-    <div>
-      <h1>jsmolka</h1>
-
-      {{- with .Site.Params.homeSubtitle }}
-        <p>{{.}}</p>
-      {{- end }}
-
-      {{- with .Site.Params.social }}
-        <div>
-          {{ partial "social-icons.html" . }}
-        </div>
-      {{- end }}
-    </div>
-  </main>
+<article class="text-center text-gray-700">
+    <h1 class="font-serif font-thin text-5xl text-gray-500">{{ .Title }}</h1>
+    {{ .Content }}
+</article>
 {{ end }}
