--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,11 +1,3 @@
-<footer class="footer">
-  <div class="footer__inner">
-    <div class="footer__content">
-      <span>&copy; {{ now.Format "2006" }}</span>
-      {{ if .Site.Author.name }}
-        <span><a href="{{ .Site.BaseURL }}">{{ .Site.Author.name }}</a></span>
-      {{ end }}
-      <span>{{ .Site.Copyright| safeHTML }}</span>
-    </div>
-  </div>
+<footer class="w-full text-center border-t border-gray-200 p-4 pin-b text-xs text-gray-400">
+    <p>made with <a href="https://gohugo.io" class="underline hover:text-blue-400">Hugo</a> and <a href="https://tailwindcss.com" class="underline hover:text-blue-400">TailwindCSS</a></p>
 </footer>
