--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,8 +1,8 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>{{ block "title" . }}
-{{- .Title }} - {{ .Site.Title -}}
-{{ end }}</title>
+<title>
+  {{ block "title" . }}{{- .Title }} - {{ .Site.Title -}}{{ end }}
+</title>
 {{ if .Description }}
 <meta name="description" content="{{ .Description }}" />
 {{ end }}
@@ -15,10 +15,10 @@
 {{ hugo.Generator }}
 
 {{ if .Site.IsServer }}
-    {{ $style := resources.Get "css/styles.css" | postCSS (dict "config" "./assets/css/dev/postcss.config.js") }}
+    {{ $style := resources.Get "css/styles.css" | resources.ToCSS | postCSS (dict "config" "./assets/css/postcss.config.js") }}
     <link rel="stylesheet" href="{{ $style.Permalink }}">
 {{ else }}
-    {{ $style := resources.Get "css/styles.css" | postCSS (dict "config" "./assets/css/postcss.config.js") | minify | fingerprint }}
+    {{ $style := resources.Get "css/styles.css" | resources.ToCSS | postCSS (dict "config" "./assets/css/postcss.config.js") | minify | fingerprint }}
     <link rel="stylesheet" href="{{ $style.Permalink }}" integrity="{{ $style.Data.Integrity }}">
 {{ end }}
 
