--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,5 +1,12 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#00aba9">
+<meta name="msapplication-TileColor" content="#00aba9">
+<meta name="theme-color" content="#ffffff">
 <title>
   {{ block "title" . }}{{- .Title }} - {{ .Site.Title -}}{{ end }}
 </title>
@@ -15,10 +22,10 @@
 {{ hugo.Generator }}
 
 {{ if .Site.IsServer }}
-    {{ $style := resources.Get "css/styles.css" | resources.ToCSS | postCSS (dict "config" "./assets/css/postcss.config.js") }}
+    {{ $style := resources.Get "css/styles.css" | postCSS (dict "config" "./assets/css/postcss.config.js") }}
     <link rel="stylesheet" href="{{ $style.Permalink }}">
 {{ else }}
-    {{ $style := resources.Get "css/styles.css" | resources.ToCSS | postCSS (dict "config" "./assets/css/postcss.config.js") | minify | fingerprint }}
+    {{ $style := resources.Get "css/styles.css" | postCSS (dict "config" "./assets/css/postcss.config.js") | minify | fingerprint }}
     <link rel="stylesheet" href="{{ $style.Permalink }}" integrity="{{ $style.Data.Integrity }}">
 {{ end }}
 
