add fonts, header changes

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang='{{ .Site.LanguageCode }}'>
+<html class="font-body font-display" lang='{{ .Site.LanguageCode }}'>
   <head>
     {{- partial "head.html" . -}}
     {{- partial "javascript.html" . -}}
   </head>
-  <body class="flex flex-col min-h-screen">
+  <body class="antialiased flex flex-col min-h-screen">
     {{- partial "header.html" . -}}
     <main class="flex-1 sm:mx-4 md:mx-12 lg:mx-24 mt-4 sm:mt-16">
     {{- block "main" . }}{{- end }}
