--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,11 +1,42 @@
 <header class="w-full">
   <nav x-data="{ open: true }" class="bg-gray-800">
+    <div class="max-w-screen-md mx-auto px-2 sm:px-6 lg:px-8">
+      <div class="relative flex items-center justify-between h-16">
+        <!-- Icon -->
+        <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
+          <div class="flex-shrink-0">
+            <img class="block h-8 w-auto" src="/icon-optimized.svg" alt="" />
+          </div>
+        </div>
+        <!-- Desktop menu -->
+        <div class="hidden sm:block sm:ml-6">
+          <div class="flex">
+            {{ range .Site.Menus.main -}}
+              <a class="ml-2 px-3 py-2 font-medium rounded-md text-gray-300 hover:text-white hover:bg-gray-700 transition duration-100 ease-in-out" href="{{ .URL | absLangURL }}">{{ .Name }}</a>
+            {{- end }}
+          </div>
+        </div>
+        <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
+          <button @click="open = !open" class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:bg-gray-700 focus:text-white transition duration-150 ease-in-out">
+            <svg class="h-6 w-6" stroke="currentColor" fill="none" viewBox="0 0 24 24">
+              <path :class="{'hidden': open, 'inline-flex': !open }" class="inline-flex" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+              <path :class="{'hidden': !open, 'inline-flex': open }" class="hidden" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+            </svg>
+          </button>
+        </div>
+      </div>
+    </div>
+  </nav>
+</header>
+
+<!-- <header class="w-full">
+  <nav x-data="{ open: true }" class="bg-gray-800">
     <div class="max-w-screen-lg mx-auto px-2 sm:px-6 lg:px-8">
       <div class="relative flex items-center justify-between h-16">
         <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
           <div class="flex-shrink-0">
-            <img class="block lg:hidden h-8 w-auto" src="/icon.svg" alt="" />
-            <img class="hidden lg:block h-8 w-auto" src="/icon.svg" alt="" />
+            <img class="block lg:hidden h-8 w-auto" src="/icon-optimized.svg" alt="" />
+            <img class="hidden lg:block h-8 w-auto" src="/icon-optimized.svg" alt="" />
           </div>
           <div class="hidden sm:block sm:ml-6">
             <div class="flex">
@@ -16,7 +47,6 @@
             </div>
           </div>
         </div>
-        <div class="text-white">Test</div>
         <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
           <button @click="open = !open" class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:bg-gray-700 focus:text-white transition duration-150 ease-in-out">
             <svg class="h-6 w-6" stroke="currentColor" fill="none" viewBox="0 0 24 24">
@@ -36,4 +66,4 @@
       </div>
     </div>
   </nav>
-</header>
+</header> -->
