--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,24 +1,18 @@
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="author" content="{{ if .Params.author }}{{ .Params.author }}{{ else }}{{ range .Site.Author }}{{ . }} {{ end }}{{ end }}">
-<meta name="description" content="{{ if .IsHome }}{{ .Site.Params.homeSubtitle }}{{ else }}{{ .Summary | plainify }}{{ end }}" />
-<meta name="keywords" content="{{ .Site.Params.keywords }}{{ if .Params.tags }}{{ range .Params.tags }}, {{ . }}{{ end }}{{ end }}" />
-<meta name="robots" content="noodp" />
-<meta name="theme-color" content="{{ .Site.Params.themeColor }}" />
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="author" content="{{ if .Params.author }}{{- .Params.author -}}{{ else }}{{ range .Site.Author }}{{- . -}} {{ end }}{{ end }}">
+<meta name="description" content="{{ if .IsHome }}{{- .Site.Params.description -}}{{ else }}{{- .Summary | plainify -}}{{ end }}">
+<link rel="canonical" href="{{ .Permalink }}" />
 
-<!-- Title -->
-{{ block "title" . }}
-  <title>
-    {{ if .IsHome }}
-      {{ $.Site.Title }} {{ with $.Site.Params.Subtitle }} — {{ . }} {{ end }}
-    {{ else }}
-      {{ .Title }} :: {{ $.Site.Title }} {{ with $.Site.Params.Subtitle }} — {{ . }}{{ end }}
-    {{ end }}
-  </title>
-{{ end }}
+{{- partial "favicons.html" . -}}
 
-<!-- Icons -->
-{{- partial "favicons.html" . }}
+<title>
+  {{ if .IsHome }}
+    {{- $.Site.Title -}}
+  {{ else }}
+    {{- .Title }} :: {{ $.Site.Title -}}
+  {{ end }}
+</title>
 
 {{ if .Site.IsServer }}
   {{ $style := resources.Get "css/styles.css" | postCSS (dict "config" "./assets/css/postcss.config.js") }}
