--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
-<article class="text-gray-700 mx-4 sm:mx-12">
-  <h1 class="font-bold text-3xl text-gray-700">{{ .Title }}</h1>
-  {{ .Content }}
-</article>
+  <article class="text-gray-700">
+    <h1 class="mb-5 font-bold text-5xl text-gray-600">{{- .Title -}}</h1>
+    {{- .Content -}}
+  </article>
 {{ end }}
