--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,8 +1,3 @@
 {{ define "main" }}
-  <div class="flex flex-col items-center text-gray-600">
-    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-      <polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2" />
-    </svg>
-    <h1 class="mt-8 font-bold text-5xl">404</h1>
-  </div>
+  <h1 class="font-bold text-5xl text-gray-600">404</h1>
 {{ end }}
