--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,7 +6,7 @@
   <body class="flex flex-col min-h-screen">
     {{- partial "header.html" . -}}
 
-    <main class="main max-w-screen-md m-auto p-4">
+    <main class="main w-full max-w-screen-md m-auto p-4">
       {{- block "main" . -}}{{ end }}
     </main>
 
