--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
   <article class="text-gray-800">
-    <h1 class="mb-5 font-bold text-5xl text-gray-600">{{- .Title -}}</h1>
+    <h1 class="mb-5">{{- .Title -}}</h1>
     {{- .Content -}}
   </article>
 {{ end }}
