--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,24 +1,9 @@
-@tailwind base;
-@tailwind components;
+@import "tailwindcss/base";
+@import "tailwindcss/components";
 
-h1 {
-  @apply font-bold text-4xl text-gray-600;
-}
+@import "assets/scss/_inter.scss";
+@import "assets/scss/_single.scss";
+@import "assets/scss/_single-posts.scss";
+@import "assets/scss/_styles.scss";
 
-h2 {
-  @apply font-bold text-3xl text-gray-600 my-2;
-}
-
-h3 {
-  @apply font-bold text-2xl text-gray-600 my-2;
-}
-
-h4 {
-  @apply font-bold text-xl text-gray-600 my-2;
-}
-
-
-@import "inter";
-@import "styles";
-
-@tailwind utilities;
+@import "tailwindcss/utilities";
