--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,3 +1,5 @@
 {{ define "main" }}
-  <h1 class="text-5xl">404</h1>
+  <div class="text-center">
+    <h1 class="font-bold text-5xl text-gray-600">404</h1>
+  </div>
 {{ end }}
