--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,10 +3,10 @@
   <head>
     {{- partial "head.html" . -}}
   </head>
-  <body class="flex flex-col min-h-screen">
+  <body class="flex flex-col m-0 p-0 min-w-screen min-h-screen">
     {{- partial "header.html" . -}}
 
-    <main class="main w-full max-w-screen-md m-auto p-4">
+    <main class="w-full max-w-screen-md m-auto p-4">
       {{- block "main" . -}}{{ end }}
     </main>
 
