--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <article class="single">
+  <article class="single-posts">
     <h1 class="mb-5">{{- .Title -}}</h1>
     {{- .Content -}}
   </article>
