--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -15,9 +15,9 @@
 </title>
 
 {{ if .Site.IsServer }}
-  {{ $style := resources.Get "scss/main.scss" | postCSS (dict "config" "assets/scss/postcss.config.js") | resources.ToCSS }}
+  {{ $style := resources.Get "scss/main.scss" | resources.ToCSS | postCSS (dict "config" "assets/scss/postcss.config.js") }}
   <link rel="stylesheet" href="{{ $style.Permalink }}">
 {{ else }}
-  {{ $style := resources.Get "scss/main.scss" | postCSS (dict "config" "assets/scss/postcss.config.js") | resources.ToCSS | minify | fingerprint }}
+  {{ $style := resources.Get "scss/main.scss" | resources.ToCSS | postCSS (dict "config" "assets/scss/postcss.config.js") | minify | fingerprint }}
   <link rel="stylesheet" href="{{ $style.Permalink }}" integrity="{{ $style.Data.Integrity }}">
 {{ end }}
