--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -6,7 +6,7 @@
       <div class="block sm:flex mb-6">
         <div class="opacity-75 text-3xl text-gray-700 mr-10">{{ .Key }}</div>
 
-        <ul class="w-full">
+        <ul class="w-full ml-0 list-none">
           {{- range .Pages }}
             <li class="py-3 border-b border-dashed border-gray-600">
               <a class="flex justify-between" href="{{ .Permalink }}">
