--- a/layouts/partials/javascript.html
+++ b/layouts/partials/javascript.html
@@ -1,3 +1,4 @@
+{{ $prism := resources.Get "js/prism.js" }}
 {{ $alpine := resources.Get "js/alpine.js" }}
-{{ $secureJS := slice $alpine | resources.Concat "bundle.js" | resources.Minify | resources.Fingerprint "sha512" }}
+{{ $secureJS := slice $prism $alpine | resources.Concat "bundle.js" | resources.Minify | resources.Fingerprint "sha512" }}
 <script type="text/javascript" src="{{ $secureJS.RelPermalink }}" integrity="{{ $secureJS.Data.Integrity }}"></script>
