--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,8 @@
 {{ define "main" }}
-  <article class="single">
-    <h1 class="mb-5">{{- .Title -}}</h1>
-    {{- .Content -}}
-  </article>
+  <div class="w-full my-24">
+    <article class="single">
+      <h1 class="mb-5">{{- .Title -}}</h1>
+      {{- .Content -}}
+    </article>
+  </div>
 {{ end }}
