--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -1,42 +1,47 @@
 {{ define "main" }}
   <div class="w-full my-24">
-    <div class="mb-3" style="font-size: .8rem; opacity: 0.6;">
-      <p>
-        <svg class="inline-block mr-2" style="vertical-align: -.125em; width: 1em; height: 1em;" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-          <circle cx="12" cy="12" r="10" />
-          <polyline points="12 6 12 12 16 14" />
-        </svg>{{ i18n "readingTime" .Page.ReadingTime }}
-      </p>
+    <div class="flex mb-3 text-sm text-gray-500">
+      <svg class="my-auto mr-3 w-4 h-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <circle cx="12" cy="12" r="10" />
+        <polyline points="12 6 12 12 16 14" />
+      </svg>
+      <span>
+        {{- i18n "readingTime" .Page.ReadingTime -}}
+      </span>
     </div>
     <article class="single-posts">
-      <h1 class="mb-5">{{- .Title -}}</h1>
+      <h1 class="mb-4">{{- .Title -}}</h1>
       {{- .Content -}}
     </article>
-    <hr class="my-2">
-    <div class="mt-8" style="font-size: .8rem; opacity: 0.6;">
-      <p class="my-1">
-        <svg class="inline-block mr-2" style="vertical-align: -.125em; width: 1em; height: 1em;" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+    <hr class="my-8 border-gray-400">
+    <div class="text-sm text-gray-500">
+      <div class="flex mb-1">
+        <svg class="my-auto mr-3 w-4 h-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z" />
           <polyline points="10 9 9 9 8 9" />
           <polyline points="14 2 14 8 20 8" />
           <line x1="16" y1="13" x2="8" y2="13" />
           <line x1="16" y1="17" x2="8" y2="17" />
         </svg>
-        {{ i18n "wordCount" .Page.WordCount }}
-      </p>
-      <p class="my-1">
-        <svg class="inline-block mr-2" style="vertical-align: -.125em; width: 1em; height: 1em;" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <span>
+          {{- i18n "wordCount" .Page.WordCount -}}
+        </span>
+      </div>
+      <div class="flex">
+        <svg class="my-auto mr-3 w-4 h-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <rect x="3" y="4" width="18" height="18" rx="2" ry="2" />
           <line x1="16" y1="2" x2="16" y2="6" />
           <line x1="8" y1="2" x2="8" y2="6" />
           <line x1="3" y1="10" x2="21" y2="10"></
         </svg>
-        {{ if .Site.Params.dateformNumTime }}
-          {{ dateFormat .Site.Params.dateformNumTime .Date.Local }}
-        {{ else }}
-          {{ dateFormat "2006-01-02" .Date.Local }}
-        {{ end }}
-      </p>
+        <span>
+          {{- if .Site.Params.dateformNum -}}
+            {{- dateFormat .Site.Params.dateformNum .Date.Local -}}
+          {{ else }}
+            {{- dateFormat "2006-01-02" .Date.Local -}}
+          {{- end -}}
+        </span>
+      </div>
     </div>
   </div>
 {{ end }}
