--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
   <div class="w-full my-24">
     <article class="single">
-      <h1 class="mb-4">{{- .Title -}}</h1>
+      <h1>{{- .Title -}}</h1>
       {{- .Content -}}
     </article>
   </div>
