--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -10,7 +10,7 @@
       </span>
     </div>
     <article class="single-posts">
-      <h1 class="mb-4">{{- .Title -}}</h1>
+      <h1>{{- .Title -}}</h1>
       {{- .Content -}}
     </article>
     <hr class="my-8 border-gray-400">
