--- a/assets/scss/_single-common.scss
+++ b/assets/scss/_single-common.scss
@@ -2,39 +2,33 @@
   @apply w-full;
   @apply text-gray-800;
 
-  h1 {
+  h1, h2, h3, h4, h5, h6 {
+    @apply my-4;
     @apply font-bold;
     @apply text-gray-600;
+  }
+
+  h1 {
     @apply text-4xl;
   }
 
   h2 {
-    @apply font-bold;
-    @apply text-gray-600;
     @apply text-3xl;
   }
 
   h3 {
-    @apply font-bold;
-    @apply text-gray-600;
     @apply text-2xl;
   }
 
   h4 {
-    @apply font-bold;
-    @apply text-gray-600;
     @apply text-xl;
   }
 
   h5 {
-    @apply font-bold;
-    @apply text-gray-600;
     @apply text-lg;
   }
 
   h6 {
-    @apply font-bold;
-    @apply text-gray-600;
     @apply text-base;
   }
 
@@ -50,6 +44,33 @@
 
     &:hover {
       @apply text-blue-500;
+    }
+  }
+
+  ul, ol {
+    @apply my-4;
+    @apply ml-5;
+    @apply list-disc;
+  }
+
+  @screen sm {
+    ul, ol {
+      @apply ml-10;
+    }
+  }
+
+  blockquote {
+    @apply m-8;
+    @apply px-4;
+    @apply border-l-2;
+    @apply border-gray-400;
+
+    p:first-of-type {
+      @apply mt-0;
+    }
+
+    p:last-of-type {
+      @apply mb-0;
     }
   }
 }
