apply full width to image

--- a/layouts/shortcodes/figure.html
+++ b/layouts/shortcodes/figure.html
@@ -1,6 +1,6 @@
 {{ if .Get "src" }}
   <figure class="ml-6 first:ml-0 {{ with .Get "class" }}{{ . }}{{ end }}" >
-    <img src="/img/{{ .Get "src" | safeURL }}" {{ with .Get "caption" }} alt="{{ . }}" {{ end }} />
+    <img class="w-full" src="/img/{{ .Get "src" | safeURL }}" {{ with .Get "caption" }} alt="{{ . }}" {{ end }} />
 
     {{ if .Get "caption" }}
       <figcaption>{{ .Get "caption" }}</figcaption>
