improve default archetype, combine singles

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="font-body font-display antialiased" lang="{{ .Site.Language }}">
+<html class="font-body antialiased" lang="{{ .Site.Language }}">
   <head>
     {{- partial "head.html" . -}}
   </head>
