--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -9,7 +9,7 @@
         {{- i18n "readingTime" .Page.ReadingTime -}}
       </span>
     </div>
-    <article class="single-posts">
+    <article class="single">
       <h1>{{- .Title -}}</h1>
       {{- .Content -}}
     </article>
