small template improvements

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
 <footer id="footer" class="flex flex-col sm:flex-row mx-auto p-10 font-medium text-center text-gray-500">
-  <span class="sm:px-4">&copy; {{ now.Format "2006" }}</span>
-  <span class="sm:px-4 sm:border-l sm:border-gray-500">{{ .Site.Copyright | safeHTML }}</span>
+  <span class="sm:pr-4">&copy; {{ now.Format "2006" }}</span>
+  <span class="sm:pl-4 sm:border-l sm:border-gray-500">{{ .Site.Copyright | safeHTML }}</span>
 </footer>
