always trim whitespaces

--- a/layouts/customs/baseof.html
+++ b/layouts/customs/baseof.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html class="font-body antialiased" lang="{{ .Site.Language }}">
+<html class="font-body antialiased" lang="{{- .Site.Language -}}">
   <head>
     {{- partial "head.html" . -}}
   </head>
   <body class="flex flex-col m-0 p-0 min-w-screen min-h-screen">
     {{- partial "header.html" . -}}
 
-    {{- block "main" . -}}{{ end }}
+    {{- block "main" . -}}{{- end -}}
 
     {{- partial "footer.html" . -}}
     {{- partial "javascript.html" . -}}
