--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="font-body antialiased" lang="{{ .Site.Language }}">
+<html class="font-body antialiased" lang="{{- .Site.Language -}}">
   <head>
     {{- partial "head.html" . -}}
   </head>
@@ -7,7 +7,7 @@
     {{- partial "header.html" . -}}
 
     <main class="w-full max-w-screen-md m-auto p-4">
-      {{- block "main" . -}}{{ end }}
+      {{- block "main" . -}}{{- end -}}
     </main>
 
     {{- partial "footer.html" . -}}
