--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,34 +1,34 @@
 {{ define "main" }}
   <article class="text-gray-800">
-    <h1 class="mb-4 font-bold text-4xl text-gray-600">{{ .Title }}</h1>
+    <h1 class="mb-4 font-bold text-4xl text-gray-600">{{- .Title -}}</h1>
 
-    {{- if .Content }}
+    {{- if .Content -}}
       {{- .Content -}}
-    {{- end }}
+    {{- end -}}
 
     <div class="mt-4">
-      {{- range .Data.Pages.GroupByDate "2006" }}
+      {{- range .Data.Pages.GroupByDate "2006" -}}
         <div class="block sm:flex mb-6">
-          <div class="mr-10 text-3xl text-gray-600">{{ .Key }}</div>
+          <div class="mr-10 text-3xl text-gray-600">{{- .Key -}}</div>
 
           <ul class="w-full">
-            {{- range .Pages }}
+            {{- range .Pages -}}
               <li class="py-3 border-b border-dashed border-gray-600">
                 <a class="flex justify-between" href="{{ .Permalink }}">
-                  <span>{{ .Title }}</span>
+                  <span>{{- .Title -}}</span>
                   <span class="text-gray-600">
                     {{- if .Site.Params.dateformShort -}}
-                      {{ .Date.Format .Site.Params.dateformShort }}
+                      {{- .Date.Format .Site.Params.dateformShort -}}
                     {{- else -}}
-                      {{ .Date.Format "Jan 2" }}
+                      {{- .Date.Format "Jan 2" -}}
                     {{- end -}}
                   </span>
                 </a>
               </li>
-            {{- end }}
+            {{- end -}}
           </ul>
         </div>
-      {{- end }}
+      {{- end -}}
     </div>
   </article>
 {{ end }}
