--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -37,7 +37,7 @@
         <span>
           {{- if .Site.Params.dateformNum -}}
             {{- dateFormat .Site.Params.dateformNum .Date.Local -}}
-          {{ else }}
+          {{- else -}}
             {{- dateFormat "2006-01-02" .Date.Local -}}
           {{- end -}}
         </span>
