reduce vertical margin in singles

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <article class="text-gray-800">
+  <article class="w-full my-4 text-gray-800">
     <h1 class="mb-4 font-bold text-4xl text-gray-600">{{- .Title -}}</h1>
 
     {{- if .Content -}}
