--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <div class="text-center">
+  <div class="text-center my-4">
     <h1 class="font-bold text-5xl text-gray-600">404</h1>
   </div>
 {{ end }}
